--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,13 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 
 # Warning flags.
-set(WARNING_FLAGS -Wall -Wextra)
+set(WARNING_FLAGS -Wall -Wextra -Wcast-align)
 
 # Extra optimization flags not associated to the `-O` levels.
 set(OPTIMIZE_FLAGS -Ofast -mavx2 -funroll-loops -march=native)
+
+# 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
 
 
 # Determine the thread library of the system.
