Skip explicit mavx2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(WARNING_FLAGS -Wall -Wextra)
 
 # Extra optimization flags not associated to the `-O` levels.
-set(OPTIMIZE_FLAGS -Ofast -mavx2 -funroll-loops -march=native)
+set(OPTIMIZE_FLAGS -Ofast -funroll-loops -march=native)
 
 
 # Determine the thread library of the system.
